# build_systems

./: .gitmodules  CMakeLists.txt  README.md
A/: CMakeLists.txt  preparing.py
B/: CMakeLists.txt  lib.cpp  lib.h
C/: CMakeLists.txt  main.cpp  main.h  tests.cpp
